--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "prepare": "npm run build",
     "build": "tsc --build",
     "refresh": "npm uninstall nk-constants nk-js-library && npm i github:nihalkonda5/nk-constants#master github:nihalkonda5/nk-js-library#master",
     "git": "tsc --build && git add . && git commit -am 'Quick Commit' && git push -u origin master"
@@ -13,6 +12,7 @@
   "files": [
     "lib"
   ],
+  "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -32,7 +32,6 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3",
     "nk-constants": "github:nihalkonda5/nk-constants#master",
-    "nk-js-library": "github:nihalkonda5/nk-js-library#master",
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
