--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc --build",
     "refresh": "npm uninstall nk-constants nk-js-library && npm i github:nihalkonda5/nk-constants#master github:nihalkonda5/nk-js-library#master",
-    "git": "tsc --build && git add . && git commit -am 'Quick Commit' && git push -u origin master"
+    "git": "tsc --build && git rm -r --cached . && git add . && git commit -am 'Quick Commit'"
   },
   "files": [
     "lib"
@@ -31,7 +31,8 @@
     "jsonschema": "^1.2.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.3",
-    "nk-constants": "github:nihalkonda5/nk-constants#master",
+    "nk-constants": "nihalkonda5/nk-constants",
+    "nk-js-library": "nihalkonda5/nk-js-library",
     "ts-node": "^9.0.0"
   },
   "devDependencies": {
